src/duplicates/DuplicateSearch.less
@import "../variables";

.DuplicateSearch {
  border-bottom: @navGra20 1px solid;
  background: #d9e8f7;
  box-shadow: 0 0 3px 1px @navGra20;
  z-index: 1;
  padding: 2rem 1.25rem 1.25rem;
}

.DuplicateSearch__title {
  margin-bottom: 1.25rem!important;
}

.DuplicateSearch__input {
  margin: 0 1rem 0 0!important;
  width: 100%;
}

.DuplicateSearch__button {
  margin-top: 1.9rem;
}

